# fullstack-takehome

./: README.md  package-lock.json
backend/: .env  Cargo.toml  Dockerfile  README.md  init.sql
backend/src/: cors.rs  db.rs  lib.rs  main.rs  resolvers.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/__generated__/: gql.ts  graphql.ts
frontend/src/components/: LoadingSpinner.tsx
frontend/src/components/table/: Table.tsx  TableFilters.tsx
frontend/src/components/table/cells/: GenericCell.tsx
frontend/src/gql/: getPosts.ts  getUsers.ts
